--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<title>MATHx Portal Login</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="MATHx Student Portal. | MATHx - THE math summer camp in NYC.
+	NYC's ONLY competitive remote math summer camp exclusively geared towards introducing students to competitive math and preparing students for the AMC and Mathcounts exams. ">
 	<link rel="icon" type="image/png" href="images/icons/favicon.ico"/>
 	<link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css">
