--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>MATHx Portal Login</title>
+	<title>MATHx Student Portal Login</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="MATHx Student Portal. | MATHx - THE math summer camp in NYC.
