--- a/public/signup.html
+++ b/public/signup.html
@@ -25,11 +25,11 @@
 				</div>
 				<form class="login100-form validate-form">
 					<span class="login100-form-title">
-						Log into the MATHx Portal
+						Signup for the the MATHx Portal
 					</span>
 
 					<div class="wrap-input100 validate-input" data-validate = "Valid email is required: ex@abc.xyz">
-						<input class="input100" type="text" id="email" name="email" placeholder="Email">
+						<input id="email" class="input100" type="text"  name="email" placeholder="Email">
 						<span class="focus-input100"></span>
 						<span class="symbol-input100">
 							<i class="fa fa-envelope" aria-hidden="true"></i>
@@ -37,7 +37,7 @@
 					</div>
 
 					<div class="wrap-input100 validate-input" data-validate = "Password is required">
-						<input class="input100" type="password" id="password" name="pass" placeholder="Password">
+						<input id="password" class="input100" type="password"  name="pass" placeholder="Password">
 						<span class="focus-input100"></span>
 						<span class="symbol-input100">
 							<i class="fa fa-lock" aria-hidden="true"></i>
@@ -45,23 +45,14 @@
 					</div>
 					
 					<div class="container-login100-form-btn">
-						<button class="login100-form-btn" id="signIn">
+						<button class="login100-form-btn" id="signUp">
 							Login
 						</button>
 					</div>
 
-					<div class="text-center p-t-12">
-						<span class="txt1">
-							Forgot
-						</span>
-						<a class="txt2" href="#">
-							Username / Password?
-						</a>
-					</div>
-
 					<div class="text-center p-t-136">
-						<a class="txt2" href="signup.html">
-							Create your Account
+						<a class="txt2" href="index.html">
+							Login to your Account
 							<i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
 						</a>
 					</div>
@@ -86,7 +77,8 @@
 	<script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-app.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-auth.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-firestore.js"></script>
-	<script src="js/signin.js"></script>
+	<script src="js/main.js"></script>
+	<script src="js/signup.js"></script>
 
 </body>
 </html>
