--- a/public/signup.html
+++ b/public/signup.html
@@ -25,8 +25,15 @@
 				</div>
 				<form class="login100-form validate-form">
 					<span class="login100-form-title">
-						Signup for the the MATHx Portal
+						Sign up for the the MATHx Portal
 					</span>
+					<div class="wrap-input100 validate-input" data-validate = "Valid email is required: ex@abc.xyz">
+						<input id="email" class="input100" type="text"  name="email" placeholder="Name">
+						<span class="focus-input100"></span>
+						<span class="symbol-input100">
+							<i class="fa fa-user" aria-hidden="true"></i>
+						</span>
+					</div>
 
 					<div class="wrap-input100 validate-input" data-validate = "Valid email is required: ex@abc.xyz">
 						<input id="email" class="input100" type="text"  name="email" placeholder="Email">
@@ -43,10 +50,19 @@
 							<i class="fa fa-lock" aria-hidden="true"></i>
 						</span>
 					</div>
+
+					<div class="wrap-input100 validate-input" data-validate = "Password is required">
+						<input id="password" class="input100" type="password"  name="pass" placeholder="Confirm Password">
+						<span class="focus-input100"></span>
+						<span class="symbol-input100">
+							<i class="fa fa-lock" aria-hidden="true"></i>
+						</span>
+					</div>
+
 					
 					<div class="container-login100-form-btn">
 						<button class="login100-form-btn" id="signUp">
-							Login
+							Sign Up
 						</button>
 					</div>
 
