--- a/public/classroom.html
+++ b/public/classroom.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MathX Classroom</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="icon" href="images/img-01.png"
 </head>
 <body>
     <div id="class"></div>
