--- a/public/classroom.html
+++ b/public/classroom.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MathX Classroom</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
-    <link rel="icon" href="images/img-01.png"
+    <link rel="icon" href="images/img-01.png">
 </head>
-<body>
+<body style="background-color: black;">
     <div id="class"></div>
     <script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-app.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-auth.js"></script>
