--- a/public/classroom.html
+++ b/public/classroom.html
@@ -5,11 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MathX Classroom</title>
-    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" type="text/css" href="css/classroom.css">
     <link rel="icon" href="images/img-01.png">
 </head>
-<body style="background-color: black;">
-    <div id="class"></div>
+<body style="background-color: #b1b1b3;">
+    <div class="topnav">
+        <a  href="https://www.mathx.nyc/">Home</a>
+        <a class="active" href="/classroom.html">Classroom</a>
+        <div id="navclass"></div>
+      </div> 
+
+    <div style="display:flex; list-style:inside; display:grid;">
+        <div id="class" style="padding-top: 20px;"></div>
+    </div>
     <script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-app.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-auth.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-firestore.js"></script>
