--- a/public/classroom.html
+++ b/public/classroom.html
@@ -8,11 +8,12 @@
     <link rel="stylesheet" type="text/css" href="css/classroom.css">
     <link rel="icon" href="images/img-01.png">
 </head>
-<body style="background-color: #b1b1b3;">
+<body style="background-color:#1f242b;">
     <div class="topnav">
-        <a  href="https://www.mathx.nyc/">Home</a>
         <a class="active" href="/classroom.html">Classroom</a>
         <div id="navclass"></div>
+        <a  href="https://www.mathx.nyc/">mathx.nyc</a>
+
       </div> 
 
     <div style="display:flex; list-style:inside; display:grid;">
