--- a/public/class.html
+++ b/public/class.html
@@ -7,6 +7,13 @@
     <title>___ Class</title>
 </head>
 <body>
+    <input type="text" id="TextSubmission">
+    <input type="submit" id="Submission">
+    <div id="classMessages"></div>
+
+    <script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-app.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-auth.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-firestore.js"></script>
     <script src="js/ClassAccess.js"></script>
 </body>
 </html>
