--- a/public/class.html
+++ b/public/class.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <input type="text" id="TextSubmission">
-    <input type="submit" id="Submission">
+    <input type="submit" id="Submission" style="display: none">
     <div id="classMessages"></div>
 
     <script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-app.js"></script>
