--- a/public/class.html
+++ b/public/class.html
@@ -8,12 +8,13 @@
 </head>
 <body>
     <input type="text" id="TextSubmission">
-    <input type="submit" id="Submission" style="display: none">
+    <input type="submit" id="Submission" style="display:none">
     <div id="classMessages"></div>
 
     <script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-app.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-auth.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-firestore.js"></script>
     <script src="js/ClassAccess.js"></script>
+    <script src="js/TeacherAccess.js"></script>
 </body>
 </html>
