Settings Page now opens

--- a/public/TeacherSettings.html
+++ b/public/TeacherSettings.html
@@ -4,18 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>___ Class</title>
+    <title>Document</title>
 </head>
 <body>
-    <div id="Staff"></div>
-    <input type="text" id="TextSubmission">
-    <input type="submit" id="Submission" style="display:none">
-    <div id="classMessages"></div>
+    <form>
+        <div id="SettingsForm">
+
+
+        </div>
+
+    </form>
 
     <script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-app.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-auth.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-firestore.js"></script>
-    <script src="js/ClassAccess.js"></script>
-    <script src="js/TeacherAccess.js"></script>
+    <script src="js/TeacherSettings.js"></script>
 </body>
 </html>
