--- a/public/reply.html
+++ b/public/reply.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <div id="OgMessage"></div>
-
+    <p>Reply Here:</p> 
+    <input type="text"/>
+    <button id="Respond">Send Reply</button>
     <script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-app.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-auth.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-firestore.js"></script>
