--- a/public/reply.html
+++ b/public/reply.html
@@ -9,8 +9,9 @@
 <body>
     <div id="OgMessage"></div>
     <p>Reply Here:</p> 
-    <input type="text"/>
+    <input id="Replying" type="text"/>
     <button id="Respond">Send Reply</button>
+    <div id="ReplyMessagesDisplay"></div>
     <script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-app.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-auth.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-firestore.js"></script>
