updated some front-end
Front-End updated, but mainly isn't done

--- a/public/class.html
+++ b/public/class.html
@@ -5,11 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>___ Class</title>
+    <link rel="stylesheet" type="text/css" href="css/classroom.css">
+
 </head>
-<body>
+<body style="background-color:#1f242b;" class="class-body">
     <div id="Staff"></div>
-    <input type="text" id="TextSubmission">
-    <input type="submit" id="Submission" style="display:none">
+    <input type="text" id="TextSubmission" placeholder="Write something here" class="text-enter">
+    <input type="submit" id="Submission" class="submit-button">
     <div id="classMessages"></div>
 
     <script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-app.js"></script>
