Updated some chizz

--- a/public/class.html
+++ b/public/class.html
@@ -10,7 +10,7 @@
 </head>
 <body style="background-color:#1f242b;" class="class-body">
     <div id="Staff"></div>
-    <input type="text" id="TextSubmission" placeholder="Write something here" class="text-enter">
+    <input type="text" id="TextSubmission" placeholder="All your thoughts and dreams go here" class="text-enter">
     <input type="submit" id="Submission" class="submit-button">
     <div id="classMessages"></div>
 
