--- a/public/Dashboard.html
+++ b/public/Dashboard.html
@@ -126,13 +126,12 @@
                                     </ul>
                                 </div>
 
-
-
+<!--
                                 <form class="ml-auto search-form search-form--light d-none d-sm-flex flex" action="index.html">
                                     <input type="text" class="form-control" placeholder="Search">
                                     <button class="btn" type="submit"><i class="material-icons">search</i></button>
                                 </form>
-
+-->
 
                                 <ul class="nav navbar-nav d-none d-md-flex">
                                     <li class="nav-item dropdown">
@@ -640,7 +639,7 @@
                 <div class="sidebar sidebar-dark sidebar-left bg-dark-gray" data-perfect-scrollbar>
 
                     <div class="d-flex align-items-center sidebar-p-a sidebar-account flex-shrink-0">
-                        <a href="index.html" class="flex d-flex align-items-center text-underline-0">
+                        <a href="Dashboard.html" class="flex d-flex align-items-center text-underline-0">
                             <span class="mr-3">
                                 <!-- LOGO -->
                                 <svg width="30px" viewBox="0 0 27 26" version="1.1" xmlns="https://www.jotform.com/uploads/Viderman/form_files/logo.6086ef0f45ee48.54055037.png">
@@ -660,7 +659,7 @@
 
                     <ul class="sidebar-menu">
                         <li class="sidebar-menu-item">
-                            <a class="sidebar-menu-button" href="index.html">
+                            <a class="sidebar-menu-button" href="Dashboard.html">
 
                                 <i class="sidebar-menu-icon sidebar-menu-icon--left material-icons">photo_filter</i>
                                 <span class="sidebar-menu-text">Overview</span>
@@ -1032,6 +1031,7 @@
     <!-- Chart Samples -->
     <script src="assets/js/page.analytics.js"></script>
 
+    <!-- Classroom Backend -->
 
 </body>
 
