--- a/public/student-dashboard.html
+++ b/public/student-dashboard.html
@@ -123,12 +123,12 @@
                                 </div>
 
 
-
+<!--
                                 <form class="ml-auto search-form search-form--light d-none d-sm-flex flex" action="index.html">
                                     <input type="text" class="form-control" placeholder="Search">
                                     <button class="btn" type="submit"><i class="material-icons">search</i></button>
                                 </form>
-
+-->
 
                                 <ul class="nav navbar-nav d-none d-md-flex">
                                     <li class="nav-item dropdown">
@@ -347,89 +347,9 @@
 
                                     <ul class="list-group list-group-flush mb-0" style="z-index: initial;">
 
-                                        <li class="list-group-item" style="z-index: initial;">
-                                            <div class="d-flex align-items-center">
-                                                <a href="#" class="mr-3">
-                                                    <img src="assets/images/logos/vuejs.svg" alt="course" class="">
+                                        <div id="class"></div>
 
-                                                </a>
-                                                <div class="flex">
-                                                    <a href="#" class="text-body"><strong>Learn Vue.js Fundamentals</strong></a>
-                                                    <div class="d-flex align-items-center">
-                                                        <div class="progress" style="width: 100px; height:4px;">
-                                                            <div class="progress-bar bg-vuejs" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                                                        </div>
-                                                        <small class="text-muted ml-2">25%</small>
-                                                    </div>
-                                                </div>
-                                                <div class="dropdown ml-3">
-                                                    <a href="#" class="dropdown-toggle text-muted" data-caret="false" data-toggle="dropdown">
-                                                        <i class="material-icons">more_vert</i>
-                                                    </a>
-                                                    <div class="dropdown-menu dropdown-menu-right">
-                                                        <a class="dropdown-item" href="#">View Stats</a>
-                                                        <a class="dropdown-item" href="#">Proceed</a>
-                                                        <a class="dropdown-item" href="#">Close</a>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </li>
 
-                                        <li class="list-group-item" style="z-index: initial;">
-                                            <div class="d-flex align-items-center">
-                                                <a href="#" class="mr-3">
-                                                    <img src="assets/images/logos/angular.svg" alt="course" class="">
-
-                                                </a>
-                                                <div class="flex">
-                                                    <a href="#" class="text-body"><strong>Angular in Steps</strong></a>
-                                                    <div class="d-flex align-items-center">
-                                                        <div class="progress" style="width: 100px; height:4px;">
-                                                            <div class="progress-bar bg-angular" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-                                                        </div>
-                                                        <small class="text-muted ml-2">100%</small>
-                                                    </div>
-                                                </div>
-                                                <div class="dropdown ml-3">
-                                                    <a href="#" class="dropdown-toggle text-muted" data-caret="false" data-toggle="dropdown">
-                                                        <i class="material-icons">more_vert</i>
-                                                    </a>
-                                                    <div class="dropdown-menu dropdown-menu-right">
-                                                        <a class="dropdown-item" href="#">View Stats</a>
-                                                        <a class="dropdown-item" href="#">Proceed</a>
-                                                        <a class="dropdown-item" href="#">Close</a>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </li>
-
-                                        <li class="list-group-item" style="z-index: initial;">
-                                            <div class="d-flex align-items-center">
-                                                <a href="#" class="mr-3">
-                                                    <img src="assets/images/logos/javascript.svg" alt="course" class="">
-
-                                                </a>
-                                                <div class="flex">
-                                                    <a href="#" class="text-body"><strong>ES6 Foundations</strong></a>
-                                                    <div class="d-flex align-items-center">
-                                                        <div class="progress" style="width: 100px; height:4px;">
-                                                            <div class="progress-bar bg-warning" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-                                                        </div>
-                                                        <small class="text-muted ml-2">80%</small>
-                                                    </div>
-                                                </div>
-                                                <div class="dropdown ml-3">
-                                                    <a href="#" class="dropdown-toggle text-muted" data-caret="false" data-toggle="dropdown">
-                                                        <i class="material-icons">more_vert</i>
-                                                    </a>
-                                                    <div class="dropdown-menu dropdown-menu-right">
-                                                        <a class="dropdown-item" href="#">View Stats</a>
-                                                        <a class="dropdown-item" href="#">Proceed</a>
-                                                        <a class="dropdown-item" href="#">Close</a>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </li>
 
                                     </ul>
                                 </div>
@@ -1253,6 +1173,10 @@
     }"></app-settings>
     </div>
 
+	<script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-app.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-auth.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-firestore.js"></script>
+    
     <!-- jQuery -->
     <script src="assets/vendor/jquery.min.js"></script>
 
@@ -1288,6 +1212,8 @@
     <script src="assets/vendor/flatpickr/flatpickr.min.js"></script>
     <script src="assets/js/flatpickr.js"></script>
 
+    
+    <script src="js/ClassroomAccess.js"></script>
 
 </body>
 
