--- a/public/student-dashboard.html
+++ b/public/student-dashboard.html
@@ -324,14 +324,15 @@
 
                         <div class="alert alert-soft-warning d-flex align-items-center card-margin" role="alert">
                             <i class="material-icons mr-3">error_outline</i>
-                            <div class="text-body">You have <strong>5 days left</strong> on your subscription</div>
-                            <a href="" class="btn btn-warning ml-auto">Upgrade</a>
+                            <div class="text-body">You have <strong>5 days left</strong> to submit {assignment name here} </div>
+                            <a href="" class="btn btn-warning ml-auto">Go to assignment</a>
                         </div>
 
                         <div class="row">
                             <div class="col-lg-7">
 
                                 <div class="card">
+                                    <!--
                                     <div class="card-header card-header-large bg-light d-flex align-items-center">
                                         <div class="flex">
                                             <h4 class="card-header__title">In Progress</h4>
@@ -341,7 +342,7 @@
                                             <a href="student-courses.html" class="btn btn-light">Browse All</a>
                                         </div>
                                     </div>
-
+                                    -->
 
 
 
@@ -357,8 +358,8 @@
                                 <div class="card">
                                     <div class="card-header card-header-large bg-light d-flex align-items-center">
                                         <div class="flex">
-                                            <h4 class="card-header__title">My Quizes</h4>
-                                            <div class="card-subtitle text-muted">Skill tests</div>
+                                            <h4 class="card-header__title">Recent Assignments</h4>
+                                            <div class="card-subtitle text-muted">Wow, you've done a lot!</div>
                                         </div>
                                         <div class="dropdown ml-auto">
                                             <a class="btn btn-sm btn-light" href="#">View all</a>
@@ -372,7 +373,7 @@
                                         <li class="list-group-item">
                                             <div class="media align-items-center">
                                                 <div class="media-body">
-                                                    <a class="text-body mb-1" href="#"><strong>Level 1 HTML</strong></a><br>
+                                                    <a class="text-body mb-1" href="#"><strong>Assignment Name Here</strong></a><br>
                                                     <div class="d-flex align-items-center">
                                                         <i class="material-icons icon-16pt text-muted mr-1">queue_play_next</i> <a href="take-course.html" class="small text-muted">Basics of HTML</a>
                                                     </div>
@@ -381,7 +382,7 @@
                                                     <span class="badge badge-warning mr-2">
                                                         Good
                                                     </span>
-                                                    <h4 class="mb-0 text-warning">5.8</h4>
+                                                    <h4 class="mb-0 text-warning">50%</h4>
                                                 </div>
                                             </div>
                                         </li>
@@ -389,7 +390,7 @@
                                         <li class="list-group-item">
                                             <div class="media align-items-center">
                                                 <div class="media-body">
-                                                    <a class="text-body mb-1" href="#"><strong>Level 2 Angular</strong></a><br>
+                                                    <a class="text-body mb-1" href="#"><strong>Assignment Name here</strong></a><br>
                                                     <div class="d-flex align-items-center">
                                                         <i class="material-icons icon-16pt text-muted mr-1">queue_play_next</i> <a href="take-course.html" class="small text-muted">Angular in Steps</a>
                                                     </div>
@@ -398,7 +399,7 @@
                                                     <span class="badge badge-success mr-2">
                                                         Great
                                                     </span>
-                                                    <h4 class="mb-0 text-success">9.8</h4>
+                                                    <h4 class="mb-0 text-success">98%</h4>
                                                 </div>
                                             </div>
                                         </li>
@@ -406,7 +407,7 @@
                                         <li class="list-group-item">
                                             <div class="media align-items-center">
                                                 <div class="media-body">
-                                                    <a class="text-body mb-1" href="#"><strong>Graduation</strong></a><br>
+                                                    <a class="text-body mb-1" href="#"><strong>Assignment Name Here</strong></a><br>
                                                     <div class="d-flex align-items-center">
                                                         <i class="material-icons icon-16pt text-muted mr-1">queue_play_next</i> <a href="take-course.html" class="small text-muted">Bootstrap Foundations</a>
                                                     </div>
@@ -415,7 +416,7 @@
                                                     <span class="badge badge-danger mr-2">
                                                         Failed
                                                     </span>
-                                                    <h4 class="mb-0 text-danger">2.8</h4>
+                                                    <h4 class="mb-0 text-danger">28%</h4>
                                                 </div>
                                             </div>
                                         </li>
@@ -437,7 +438,6 @@
                                     </div>
                                     <div class="card-header card-header-tabs-basic nav" role="tablist">
                                         <a href="#activity_all" class="active" data-toggle="tab" role="tab" aria-controls="activity_all" aria-selected="true">All</a>
-                                        <a href="#activity_purchases" data-toggle="tab" role="tab" aria-controls="activity_purchases" aria-selected="false">Purchases</a>
                                         <a href="#activity_emails" data-toggle="tab" role="tab" aria-controls="activity_emails" aria-selected="false">Emails</a>
                                         <a href="#activity_quotes" data-toggle="tab" role="tab" aria-controls="activity_quotes" aria-selected="false">Quotes</a>
                                     </div>
@@ -753,7 +753,7 @@
                                 </div>
                                 <!-- END ACTIVITY -->
 
-                                <!-- START SKILLS -->
+                                <!-- 
 
                                 <div class="card">
                                     <div class="card-header">
@@ -814,7 +814,7 @@
                                         </a>
                                     </div>
                                 </div>
-                                <!-- END SKILLS -->
+                                 END SKILLS -->
                             </div>
                         </div>
                     </div>
