Lots of work( mainly on teacher side)

--- a/public/new-assignment.html
+++ b/public/new-assignment.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="shortcut icon" href="https://www.jotform.com/uploads/Viderman/form_files/logo.6086ef0f45ee48.54055037.png" />
-    <title> Assignment | MATHx Portal</title>
+    <title>New Assignment | MATHx Portal</title>
+
 
     <!-- Prevent the demo from appearing in search engines -->
     <meta name="robots" content="noindex">
@@ -86,7 +87,7 @@
 
 
 
-
+                                <!---->
                                 <div class="navbar-collapse collapse" id="navbarsExample03">
                                     <ul class="nav navbar-nav">
                                         <!--
@@ -331,73 +332,145 @@
                 <!-- // END Header -->
 
                 <!-- Header Layout Content -->
-                <div class="mdk-header-layout__content mdk-header-layout__content--fullbleed mdk-header-layout__content--scrollable page" style="padding-top: 60px;">
+                <div class="mdk-header-layout__content mdk-header-layout__content--fullbleed mdk-header-layout__content--scrollable page" style="padding-top: 60px; ">
 
 
                     <div class="page__heading border-bottom">
                         <div class="container-fluid page__container">
-                            <h1>(Assignment Name Here)</h1>
-                            <p class="lead text-light-gray mb-0">(Due Date Here)</p>
+                            <h1>Create a New Assignment</h1>
+                            <p class="lead text-light-gray mb-0">MATHx  Portal</p>
                         </div>
                     </div>
-                    
 
                     <div class="container-fluid page__container">
                         <div class="card card-form">
-                            <div class="row no-gutters" style="margin:auto;">
-                                <div class="col-lg-4 card-body">
-                                    <p><strong class="headings-color">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta nesciunt magni voluptate soluta! Magni aliquid odio ut consequuntur ad nesciunt deserunt adipisci iste qui quae, optio atque quaerat reprehenderit magnam!</strong></p>
-                                    <p class="text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores illum error perspiciatis in laboriosam quibusdam, dolores molestias quas eos ratione rerum aliquid iure dolorum numquam, autem deserunt aut. Temporibus, debitis.</p>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="card card-form">
                             <div class="row no-gutters">
                                 <div class="col-lg-4 card-body">
-                                    <p><strong class="headings-color">Assignment Title</strong></p>
-                                    <p class="text-muted">Assignment Description</p>
+                                    <p><strong class="headings-color">Assignment Name</strong></p>
+                                    <p class="text-muted">M@ke sur3 to wr1t3 a n0rmAl assignment name.</p>
                                 </div>
                                 <div class="col-lg-8 card-form__body card-body">
-                                    <label>Assignment Comments/Questions</label>
-                                    <div class="h-150" data-toggle="quill" data-quill-placeholder="Quill WYSIWYG editor">
-                                        <h1>What did the teacher tell the student?</h1>
-                                        <p>Get shrekt!</p>
-                                        <p><br></p>
-                                    </div>
-                                    <div class="fallback">
-                                        <div class="custom-file">
-                                            <input type="file" class="custom-file-input" id="customFileUploadMultiple" multiple>
-                                            <label class="custom-file-label" for="customFileUploadMultiple">Choose file</label>
+                                    <form>
+                                        <div class="form-group">
+                                            <label for="exampleInputEmail1">Assignment Name:</label>
+                                            <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter your email address ..">
                                         </div>
-                                    </div>
-
+                                        <div class="form-group">
+                                            <label for="exampleInputPassword1">Your password:</label>
+                                            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Enter your password ..">
+                                        </div>
+                                        <button type="submit" class="btn btn-primary">Submit</button>
+                                    </form>
                                 </div>
                             </div>
                         </div>
-                        
 
                         <div class="card card-form">
                             <div class="row no-gutters">
                                 <div class="col-lg-4 card-body">
-                                    <p><strong class="headings-color">Assignment Tags</strong></p>
-                                    <p class="text-muted">Here is where you have tags. Please select if this is homework, classwork, or smthn else. Don't fake it though. </p>
+                                    <p><strong class="headings-color">Due Date</strong></p>
+                                    <p class="text-muted">
+                                        So, basically, this is where you put in the due date of the course and you also will tell the lovely kiddies what you need and when. Please give them at least one day 🙏. If not, that's fine too I guess.
+                                    </p>
                                 </div>
                                 <div class="col-lg-8 card-form__body card-body">
                                     <div class="form-group">
-                                        <label for="select03">Assignment Tags</label>
-                                        <select id="select03" data-toggle="select" multiple class="form-control">
-                                            <option selected="">Homework</option>
-                                            <option selected="">Classwork</option>
-                                            <option>Exam Work</option>
-                                            <option>Other</option>
+                                        <label for="flatpickrSample01">Date</label>
+                                        <input id="flatpickrSample01" type="text" class="form-control" placeholder="Flatpickr example" data-toggle="flatpickr" value="today">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="flatpickrSample02">Range</label>
+                                        <input id="flatpickrSample02" type="text" class="form-control" placeholder="Flatpickr range example" data-toggle="flatpickr" data-flatpickr-mode="range" value="2018-10-07 to 2018-10-15">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card card-form">
+                            <div class="row no-gutters">
+                                <div class="col-lg-4 card-body">
+                                    <p><strong class="headings-color">Assignment Description</strong></p>
+                                    <p class="text-muted">Sit tight. This is the part where you'll need to do a LOT of writing. Well, I was partially joking, but this is where you'll be describing the assignment and what you're planning on covering. Gl lmao.</p>
+                                </div>
+                                <div class="col-lg-8 card-form__body card-body">
+                                    <label>Assignment Description</label>
+                                    <div class="h-150" data-toggle="quill" data-quill-placeholder="Quill WYSIWYG editor">
+                                        <h1>Moyai 🗿 moment</h1>
+                                        <p>This editor is quite <strong>poggers</strong> and you too will <em>learn to love it</em></p>
+                                        <p><br></p>
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="card card-form">
+                            <div class="row no-gutters">
+                                <div class="col-lg-4 card-body">
+                                    <p><strong class="headings-color">Uploading misc chizz</strong></p>
+                                    <p class="text-muted">This is where you will upload the assosciated files of the assignment. Please, don't rickroll students and upload rickroll.mp4. Btw, <a href="https://www.youtube.com/watch?v=wpV-gGA4PSk" target="_blank">this </a>video is quite important, make sure to watch it please. </p>
+                                </div>
+                                <div class="col-lg-8 card-form__body card-body d-flex align-items-center">
+
+                                    <div class="dropzone dropzone-multiple w-100" data-toggle="dropzone" data-dropzone-multiple data-dropzone-url="http://" data-dropzone-files='[]'>
+
+                                        <div class="fallback">
+                                            <div class="custom-file">
+                                                <input type="file" class="custom-file-input" id="customFileUploadMultiple" multiple>
+                                                <label class="custom-file-label" for="customFileUploadMultiple">Choose file</label>
+                                            </div>
+                                        </div>
+
+                                        <ul class="dz-preview dz-preview-multiple list-group list-group-flush">
+                                            <li class="list-group-item">
+                                                <div class="form-row align-items-center">
+                                                    <div class="col-auto">
+                                                    </div>
+                                                    <div class="col">
+                                                        <div class="font-weight-bold" data-dz-name>...</div>
+                                                        <p class="small text-muted mb-0" data-dz-size></p>
+                                                    </div>
+                                                </div>
+                                            </li>
+                                        </ul>
+
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="card card-form">
+                            <div class="row no-gutters">
+                                <div class="col-lg-4 card-body">
+                                    <p><strong class="headings-color">Where do you belong to</strong></p>
+                                    <p class="text-muted">Alright children. This is where you say which section this belongs to. Don't be doo doo and lie, just be honest man, it's not worth it. </p>
+                                </div>
+                                <div class="col-lg-8 card-form__body card-body">
+                                    <div class="form-group">
+                                        <label for="select01">Which class?</label>
+                                        <select id="select01" data-toggle="select" class="form-control">
+                                            <option selected="">Explorator</option>
+                                            <option>AIME Qualifier</option>
+                                        </select>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="select02">Teachers</label>
+                                        <select id="select02" data-toggle="select" data-minimum-results-for-search="-1" class="form-control">
+                                            <option data-avatar-src="assets/images/256_rsz_1andy-lee-642320-unsplash.jpg">
+                                                Adelle Sherley
+                                            </option>
+                                            <option data-avatar-src="assets/images/avatar/demi.png">
+                                                Adrian Demian
+                                            </option>
+                                            <option data-avatar-src="assets/images/avatar/green.svg">
+                                                Green Doe
+                                            </option>
                                         </select>
                                     </div>
                                 </div>
                             </div>
                         </div>
-
-                        <a href="#"><button type="button" class="btn btn-block btn-primary" href="#">Submit Assignment</button></a>
+                        <button type="button" class="btn btn-block btn-sm btn-info" style="margin-top: 10px; margin-bottom: 10px; height: 50px;">Create Assignment</button>
 
 
                         <!-- <div class="card card-form">
