--- a/public/author-courses.html
+++ b/public/author-courses.html
@@ -69,9 +69,9 @@
 
 
 
-
                                 <div class="navbar-collapse collapse" id="navbarsExample03">
                                     <ul class="nav navbar-nav">
+                                        <!--
                                         <li class="nav-item dropdown">
                                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">UI Components</a>
                                             <div class="dropdown-menu">
@@ -96,12 +96,23 @@
 
                                             </div>
                                         </li>
+                                        -->
                                         <!-- <li class="nav-item ">
     <a class="nav-link" href="ui-forms.html">Forms</a>
   </li>
   <li class="nav-item ">
     <a class="nav-link" href="ui-charts.html">Charts</a>
-  </li> -->
+  </li> -->                             <!--
+                                        <li class="nav-item dropdown">
+                                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Layouts</a>
+                                            <div class="dropdown-menu">
+                                                <a class="dropdown-item active" href="admin-chat.html">Default</a>
+                                                 <a class="dropdown-item" href="fluid-admin-chat.html">Full Width Navs</a> 
+                                                <a class="dropdown-item" href="fixed-admin-chat.html">Fixed Navs</a>
+                                                <a class="dropdown-item" href="mini-admin-chat.html">Mini Sidebar + Navs</a>
+                                            </div>
+                                        </li>
+                                        -->
                                         <li>
 
                                     </ul>
@@ -358,7 +369,7 @@
                                             <div class="flex" style="min-width: 200px;">
                                                 <div class="d-flex">
                                                     <div>
-                                                        <h4 class="card-title mb-1"><a href="#">Learn Vue.js</a></h4>
+                                                        <h4 class="card-title mb-1"><a href="teache">Learn Vue.js</a></h4>
                                                         <p class="text-muted">Let’s start with a quick tour of Vue’s data binding features.</p>
                                                     </div>
                                                     <div class="dropdown ml-auto">
@@ -366,7 +377,7 @@
                                                             <i class="material-icons">more_vert</i>
                                                         </a>
                                                         <div class="dropdown-menu dropdown-menu-right">
-                                                            <a class="dropdown-item" href="#">Edit Course</a>
+                                                            <a class="dropdown-item" href="teacher-lessons.html">Edit Course</a>
                                                             <a class="dropdown-item" href="#">Statistics</a>
                                                             <div class="dropdown-divider"></div>
                                                             <a class="dropdown-item text-danger" href="#">Archive</a>
